修复General bug
